# cryptocurrency

./: .gitmodules  CMakeLists.txt  compile_all.sh  flow.md  json_test.cpp  readme.md  system_layout.uml  test.cpp  todo.md
fake_client/: compile_client.sh  main.cpp
logcollector/: CMakeLists.txt  LogCollector.cpp  LogCollector.h  main.cpp  readme.md
manager/: CMakeLists.txt  Manager.cpp  Manager.h  a.out  design.md  main.cpp  manager  readme.md
miner/: CMakeLists.txt  Miner.cpp  Miner.h  design.md  main.cpp  miner  readme.md
networker/: CMakeLists.txt  Networker.cpp  Networker.h  main.cpp  readme.md
shared/: Blockchain.h  CMakeLists.txt  Communication.cpp  Communication.h  Crypto.cpp  Crypto.h  Logger.h  Message.h  Messages.h  Module.cpp  Module.h  Transaction.h  Types.h  Utils.cpp  Utils.h
transactioner/: CMakeLists.txt  Transactioner.cpp  Transactioner.h  design.md  main.cpp  readme.md
